# coursory

./: .gitignore  AGENTS.md  README.md  README.zh.md  pyproject.toml  ruff.toml
course-planning/: AGENTS.md  README.md
crawlers/pku-courses/: AGENTS.md  README.md  course_parser.py  crawl_course_search.py  parquet_store.py  pku_common.py
crawlers/thu-courses/: .gitignore  AGENTS.md  README.md  auth.py  crawl_opening_info.py  opening_links.py  opening_parser.py  parquet_store.py  thu_common.py
tests/: test_cli_smoke.py
